correction du tableau pour que tous soit aligner sur l'image du fond

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ p {
 }
 
 table {
-  margin-bottom: 70px;
+  margin-bottom: 36px;
 }
 
 td {
